# twir-events-lint

./: Cargo.toml  README.md  out
meetup-automation/: event.py  generate_events_meetup.py  pyproject.toml
meetup-automation/groups/: maybe-rust-meetups.json
src/: args.rs  constants.rs  event_line_types.rs  event_merger.rs  events.rs  lib.rs  line_types.rs  lint.rs  linter.rs  main.rs  merger.rs  reader.rs  regex.rs  twir_reader.rs
test/: 570.md  571-events-only-updated.md  571-events-only.md
test/merge/: draft.md  expected.md  updated.json  updated.md
