[package]
name = "twir-events-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
regex = "1.11.1"
simple_logger = { version = "5.0.0", features = ["stderr"] }
url = "2.5.3"

[[bin]]
name = "lint"
path = "src/bin/lint.rs"

[[bin]]
name = "merge"
path = "src/merger.rs"
