[project]
name = "meetup-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "cryptography==44.0.1",
    "idna==3.10",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "requests==2.32.3",
    "urllib3==2.2.3",
]
